feat: added comments on separate videos and posts - BACKEND