@@ -1,15 +1,17 @@
 package com.astro.socialCode.services;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.astro.socialCode.dto.ComentDTO;
 import com.astro.socialCode.dto.mapper.ComentMapper;
-import com.astro.socialCode.repositories.ComentRepository;
+import com.astro.socialCode.dto.response.ComentPostDTO;
+import com.astro.socialCode.dto.response.ComentVideoDTO;
+import com.astro.socialCode.repositories.ComentPostRepository;
+import com.astro.socialCode.repositories.ComentVideoRepository;
+import com.astro.socialCode.repositories.VideoRepository;
 import com.astro.socialCode.services.exceptions.DatabaseException;
 
 import jakarta.persistence.EntityNotFoundException;
@@ -17,26 +19,55 @@ import jakarta.persistence.EntityNotFoundException;
 @Service
 public class ComentService {
 
-	private final ComentRepository comentRepository;
-	
+	private final ComentPostRepository comentRepository;
+	private final ComentVideoRepository comentVideoRepository;
 	private final ComentMapper comentMapper;
+	private final VideoRepository videoRepository;
 	
-	public ComentService(ComentRepository comentRepository, ComentMapper comentMapper) {
+	public ComentService(ComentPostRepository comentRepository, ComentMapper comentMapper,
+			VideoRepository videoRepository, ComentVideoRepository comentVideoRepository) {
 		this.comentRepository = comentRepository;
 		this.comentMapper = comentMapper;
+		this.videoRepository = videoRepository;
+		this.comentVideoRepository = comentVideoRepository;
 	}
 
-	@Transactional(readOnly = true)
-	public List<ComentDTO> findComentsByUser(Long userId) {
-		return comentRepository.findComentsByUserId(userId)
-				   .stream()
-				   .map(comentMapper::toDTO)
-				   .collect(Collectors.toList());							   
+	public List<ComentVideoDTO> findComentsByVideo(Long videoId) {
+		return comentVideoRepository.findComentVideoByVideoId(videoId)
+				.stream()
+				.map(comentMapper::toDTOComentVideo)
+				.toList();
+	}
+	
+	public List<ComentPostDTO> findComentsByPost(Long postId) {
+		return comentRepository.findComentPostByPostId(postId)
+				.stream()
+				.map(comentMapper::toDTOComentPost)
+				.toList();
+	}
+	
+	public List<ComentVideoDTO> findComentsInVideoByOwner(Long OwnerId) {
+		return comentVideoRepository.findComentVideoByOwnerId(OwnerId)
+				.stream()
+				.map(comentMapper::toDTOComentVideo)
+				.toList();
+	}
+	
+	public List<ComentPostDTO> findComentsInPostByOwner(Long OwnerId) {
+		return comentRepository.findComentPostByOwnerId(OwnerId)
+				.stream()
+				.map(comentMapper::toDTOComentPost)
+				.toList();
+	}
+
+	@Transactional
+	public ComentVideoDTO publishComentInVideo(ComentVideoDTO comentDTO) {
+		return comentMapper.toDTOComentVideo(comentVideoRepository.save(comentMapper.toEntityComentVideo(comentDTO)));
 	}
 	
 	@Transactional
-	public ComentDTO publishComment(ComentDTO comentDTO) {
-		return comentMapper.toDTO(comentRepository.save(comentMapper.toEntity(comentDTO)));
+	public ComentPostDTO publishComentInPost(ComentPostDTO comentDTO) {
+		return comentMapper.toDTOComentPost(comentRepository.save(comentMapper.toEntityComentPost(comentDTO)));
 	}
 	
 	public void deleteComent(Long comentId) {
